# numerical-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  run.py
dependencies/assimp/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
models/: beam.frame  beam.stl  beam2.frame  bicycle.frame  car.frame  grid.frame  grid2.frame  orientation.stl  pyramid.frame
numerical_analysis/: CMakeLists.txt
numerical_analysis/src/: fluid.c  fluid.h  main.c
numerical_analysis/src/core/: CMakeLists.txt  api.c  api.h  filepath.c  filepath.h  linearsolve.c  linearsolve.h  linsolvempi.c  linsolvempi.h  matrix.h  mpitest.h  mpiutility.c  mpiutility.h  transform.h  vector.h
numerical_analysis/src/fluid/: CMakeLists.txt  fluid.c  fluid.h
numerical_analysis/src/graphics/: CMakeLists.txt  application.c  application.h  camera.c  camera.h  graphics.c  graphics.h  grid.h  import.c  import.h  input.c  input.h  matrix.h  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h
numerical_analysis/src/structural/: CMakeLists.txt  frame.c  frame.h  frameimport.c  frameimport.h  frameprocess.c  frameprocess.h
